--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ssdx-pokus",
   "version": "0.0.1",
   "main": "pokus.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "engines": {
     "node": "0.8.x",
     "npm": "1.1.x"
