--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "pokus.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node pokus.js"
   },
   "engines": {
     "node": "0.8.x",
